--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,13 @@
       "use": "@vercel/node"
     }
   ],
-
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "./index.js",
+      "methods": ["GET", "POST", "PUT", "PATCH", "OPTIONS", "DELETE"]
+    }
+  ],
   "headers": [
     {
       "source": "/(.*)",
