--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,12 @@
 {
   "version": 2,
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }],
 
+  "builds": [
+    {
+      "src": "/index.js",
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [
     {
       "src": "/(.*)",
