--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,12 @@
   "version": 2,
   "builds": [
     {
-      "src": "./index.js",
+      "src": "./api/index.js",
       "use": "@vercel/node"
     }
   ],
 
+  "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }],
   "headers": [
     {
       "source": "/(.*)",
